Add missing px unit to property

--- a/src/scss/fcnmm-style.scss
+++ b/src/scss/fcnmm-style.scss
@@ -63,7 +63,7 @@
 
   // === PAGE ==================================================================
 
-  --page-inset-top: 0;
+  --page-inset-top: 0px;
 
   // === NAVIGATION ============================================================
 
